--- a/dom/one.html
+++ b/dom/one.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     
     <title>Dom Learning</title>
+    <style>
+        .bg-clock{
+            background-color: #212121;
+            color:#fff;
+        }
+    </style>
 </head>
 <body>
     <div class = "bg-clock">
-        <h1 class = "heading"> Dom learning on chai aur code</h1>
+        <h1 id = "title" class = "heading"> Dom learning on chai aur code<</h1>
         <p> Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
